Demand Navigator/src/objects/Demand_Configuration_Ratio__c.object
<CustomObject>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <label>Business Unit</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Americas</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Central Europe</fullName>
                </value>
                <value>
                    <fullName>UK and Ireland</fullName>
                </value>
                <value>
                    <fullName>AMEA</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Nordics</fullName>
                </value>
                <value>
                    <fullName>South and West Europe</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Deal_offshore__c</fullName>
        <formula>Offshore_Resource__c *  Rate_per_Head_offshore__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Deal offshore</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Deal_onsite__c</fullName>
        <formula>Onsite_Resource__c *  Rate_per_Head_onsite__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Deal onsite</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Demand_Key__c</fullName>
        <formula>TEXT(Business_Unit__c) &amp; &apos;-&apos; &amp;  TEXT(Division__c) &amp; &apos;-&apos; &amp;  TEXT(Service_Line__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Demand Key</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <label>Industry</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Business_Unit__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Manufacturing</fullName>
                </value>
                <value>
                    <fullName>Banking and Finance</fullName>
                </value>
                <value>
                    <fullName>Healthcare</fullName>
                </value>
                <value>
                    <fullName>High Tech</fullName>
                </value>
                <value>
                    <fullName>Retail</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Emails__c</fullName>
        <label>Email Alerts</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OffShore__c</fullName>
        <label>Offshore</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Advisor</fullName>
                </value>
                <value>
                    <fullName>Professional</fullName>
                </value>
                <value>
                    <fullName>Manager</fullName>
                </value>
                <value>
                    <fullName>Senior Professional</fullName>
                </value>
                <value>
                    <fullName>Senior Advisor</fullName>
                </value>
                <value>
                    <fullName>Senior Manager</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OffshoreAmount__c</fullName>
        <label>OffshoreAmount</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Offshore_Deal_Month__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Offshore Hours / Month</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Offshore_Ratio__c</fullName>
        <formula>Offshore_Resource__c / Total_Deal__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Offshore Revenue Ratio</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Offshore_Resource__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Offshore Resource Ratio</label>
        <precision>10</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OnSiteAmount__c</fullName>
        <label>OnSiteAmount</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OnSite__c</fullName>
        <label>OnSite</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Principal</fullName>
                </value>
                <value>
                    <fullName>Consultant</fullName>
                </value>
                <value>
                    <fullName>Senior Principal</fullName>
                </value>
                <value>
                    <fullName>Practice Partner</fullName>
                </value>
                <value>
                    <fullName>Vice President</fullName>
                </value>
                <value>
                    <fullName>President and CEO</fullName>
                </value>
                <value>
                    <fullName>Senior Consultant</fullName>
                </value>
                <value>
                    <fullName>Managing Partner</fullName>
                </value>
                <value>
                    <fullName>Managing Consultant</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Onsite_Deal_Month__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Onsite Hours / Month</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Onsite_Ratio__c</fullName>
        <formula>Onsite_Resource__c /  Total_Deal__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Onsite Revenue Ratio</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Onsite_Resource__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Onsite Resource Ratio</label>
        <precision>10</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rate_per_Head_offshore__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Rate per Head offshore</label>
        <precision>12</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Rate_per_Head_onsite__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Rate per Head onsite</label>
        <precision>12</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Service_Line__c</fullName>
        <label>Offering</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Applications</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Cloud</fullName>
                </value>
                <value>
                    <fullName>Consulting</fullName>
                </value>
                <value>
                    <fullName>Cyber</fullName>
                </value>
                <value>
                    <fullName>Infrastructure</fullName>
                </value>
                <value>
                    <fullName>Big Data</fullName>
                </value>
                <value>
                    <fullName>Mobility</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Deal__c</fullName>
        <formula>Deal_offshore__c + Deal_onsite__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Deal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Rate_per_head__c</fullName>
        <formula>Rate_per_Head_onsite__c +  Rate_per_Head_offshore__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Rate per head</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Demand Configuration Ratio</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Demand_Key__c</columns>
        <columns>Offshore_Deal_Month__c</columns>
        <columns>Onsite_Deal_Month__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Demand Configuration Ratio Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Demand Configuration Ratios</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Sum_of_Resource_should_be_100</fullName>
        <active>true</active>
        <errorConditionFormula>(Onsite_Resource__c + Offshore_Resource__c ) &lt;&gt; 100</errorConditionFormula>
        <errorMessage>Sum of onsite and offshore resources must be 100</errorMessage>
    </validationRules>
</CustomObject>